Mon Dec 19 09:43:03 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:

          Changed order of code to actually execute code that was 
          after a return.

        * tests/transport/simple/SimpleDataWriter.cpp:
        * tests/transport/simple_bp/SimpleDataWriter.cpp:
        * tests/transport/simple_n/SimpleDataWriter.cpp:
        * tests/transport/udp_simple/SimpleDataWriter.cpp:
        * tests/transport/udp_simple_n/SimpleDataWriter.cpp:

          Changed tests to use an allocator.

Fri Dec 16 01:03:41 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.inl:

          Moved the method back to cpp and removed the ACE_INLINE
          declaration.  The method needed a define in the cpp file.

Fri Dec 16 00:50:26 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.inl:

          Moved the ACE_INLINE method to the inl file.  Not having it
          in the inl file results in an undefined reference when linking
          with the dll

Thu Dec 15 22:31:13 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSet_rch.h:

          Corrected capitalization of header include.

Thu Dec 15 10:08:28 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSet.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/DataLinkSet.h:
   
          Corrected the number of chunks for map_entry_allocator_. It should be
          the number of datalinks. The map_ is also changed to be a pointer of 
          hash map so we can appropiately delete the hash map with current 
          implementation of ACE_Hash_Map_Manager_Ex and ACE_Hash_Map_With_Allocator.